--- a/app/views/names/new.html.erb
+++ b/app/views/names/new.html.erb
@@ -2,6 +2,24 @@
 <div class="row">
   <div class="col-md-12">
     <%= form_for(@name, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+    <% if @name.errors.any? %>
+      <div class="panel panel-danger col-md-offset-1">
+        <div class="panel-heading">
+          <h2 class="panel-title">
+            <%= pluralize(@name.errors.count, "error") %>
+            prohibited this name from being saved: </h2>
+            <div class="panel-body">
+              <ul>
+                <% @name.errors.full_messages.each do |msg| %>
+                <li>
+                  <%= msg %>
+                </li>
+                <% end %>
+              </ul>
+            </div>
+          </div>
+        </div>
+      <% end %>
       <div class="form-group">
         <div class="control-label col-md-1">
           <%= f.label :first_name %>
