--- a/app/views/names/new.html.erb
+++ b/app/views/names/new.html.erb
@@ -20,21 +20,25 @@
           </div>
         </div>
       <% end %>
+      
       <div class="form-group">
-        <div class="control-label col-md-1">
+        <div class="control-label col-md-2">
           <%= f.label :first_name %>
         </div>
-        <div class="col-md-11">
-          <%= f.text_field :first_name, class: "form-control", autofocus: true %>
+        <div class="col-md-10">
+          <%= f.text_field :first_name, class: "form-control pull-right", autofocus: true %>
         </div>
-        <div class="form-group">
-          <div class="control-label col-md-1">
-            <%= f.label :last_name %>
-          </div>
-          <div class="col-md-11">
-            <%= f.text_field :last_name, class: "form-control", autofocus: true %>
-          </div>
       </div>
+
+      <div class="form-group">
+        <div class="control-label col-md-2">
+          <%= f.label :last_name %>
+        </div>
+        <div class="col-md-10">
+          <%= f.text_field :last_name, class: "form-control pull-right", autofocus: true %>
+        </div>
+      </div>
+
       <div class="form-group">
         <div class="col-md-offset-1 col-md-11">
           <%= f.submit "Create Name", class: "btn btn-primary btn-lg pull-right" %>
