--- a/app/views/names/index.html.erb
+++ b/app/views/names/index.html.erb
@@ -2,6 +2,6 @@
 
 <% @names.each do |name| %>
   <div class="full-name">
-    <%= link_to name.full_name, name_path(name) %>
+    <%= link_to "#{name.first_name} #{name.last_name}", name_path(name) %>
   </div>
 <% end %>
