--- a/app/views/names/show.html.erb
+++ b/app/views/names/show.html.erb
@@ -3,6 +3,8 @@
     <%= "#{@name.first_name} #{@name.last_name}" %>
   </h1>
 
+  <%= link_to "Edit Name", edit_name_path(@name), class: "btn btn-primary btn-lg btn-space" %>
+
   <div class="admin">
     <p>Created</p>
     <div class="glyphicon glyphicon-calendar" id="name-created-date">
