--- a/app/views/names/index.html.erb
+++ b/app/views/names/index.html.erb
@@ -1,5 +1,6 @@
 <div>
   <%= link_to "New Name", new_name_path, class: "btn btn-primary btn-lg"%>
+  <%= link_to "Events", events_path, class: "btn btn-primary btn-lg"%>
 </div>
 <br>
 
