--- a/app/views/names/show.html.erb
+++ b/app/views/names/show.html.erb
@@ -4,6 +4,8 @@
   </h1>
 
   <%= link_to "Edit Name", edit_name_path(@name), class: "btn btn-primary btn-lg btn-space" %>
+  <%= link_to "Delete Name", name_path(@name), method: :delete,
+  data: { confirm: "Are you sure you want to delete the name?" }, class: "btn btn-primary btn-lg btn-space" %>
 
   <div class="admin">
     <p>Created</p>
