--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -48,3 +48,51 @@ body {
 .page-heading, div > label {
   color: #64103F;
 }
+
+// Listing name styling
+
+.detail-name {
+  font-weight: bold;
+  font-size: 2.5em;
+  margin-bottom: 0.8em;
+  padding-left: 0.7em;
+}
+
+.author {
+  color: #64103F;
+  padding-left: 25px;
+}
+
+// .article-title {
+//
+// }
+
+.detail-name {
+  margin-top: 20px;
+  color: #0000ff;
+}
+
+.edit-delete {
+  margin-top: 20px;
+}
+
+// Sign up -- Sign in
+.sign-link a {
+  color: #64103F;
+}
+
+#error_explanation {
+ background-color: #f2dede;
+ color: #a94442;
+ text-align: left;
+ padding: 5px 20px;
+ margin-bottom: 30px;
+}
+
+#error_explanation h2 {
+ font-size: 150%;
+}
+
+footer {
+  color: #64103F;
+}
