--- a/app/views/names/new.html.erb
+++ b/app/views/names/new.html.erb
@@ -1,49 +1,3 @@
 <h3 class="text-center">Adding New Name</h3>
-<div class="row">
-  <div class="col-md-12">
-    <%= form_for(@name, :html => {class: "form-horizontal", role: "form"}) do |f| %>
-    <% if @name.errors.any? %>
-      <div class="panel panel-danger col-md-offset-1">
-        <div class="panel-heading">
-          <h2 class="panel-title">
-            <%= pluralize(@name.errors.count, "error") %>
-            prohibited this name from being saved: </h2>
-            <div class="panel-body">
-              <ul>
-                <% @name.errors.full_messages.each do |msg| %>
-                <li>
-                  <%= msg %>
-                </li>
-                <% end %>
-              </ul>
-            </div>
-          </div>
-        </div>
-      <% end %>
 
-      <div class="form-group">
-        <div class="control-label col-md-2">
-          <%= f.label :first_name %>
-        </div>
-        <div class="col-md-10">
-          <%= f.text_field :first_name, class: "form-control pull-right", autofocus: true %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="control-label col-md-2">
-          <%= f.label :last_name %>
-        </div>
-        <div class="col-md-10">
-          <%= f.text_field :last_name, class: "form-control pull-right", autofocus: true %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="col-md-offset-1 col-md-11">
-          <%= f.submit "Create Name", class: "btn btn-primary btn-lg pull-right" %>
-        </div>
-      </div>
-    <% end %>
-  </div>
-</div>
+<%= render 'form' %>
