--- a/app/views/names/show.html.erb
+++ b/app/views/names/show.html.erb
@@ -3,9 +3,11 @@
     <%= "#{@name.first_name} #{@name.last_name}" %>
   </h1>
 
+<div class="edit-delete">
   <%= link_to "Edit Name", edit_name_path(@name), class: "btn btn-primary btn-lg btn-space" %>
   <%= link_to "Delete Name", name_path(@name), method: :delete,
   data: { confirm: "Are you sure you want to delete the name?" }, class: "btn btn-primary btn-lg btn-space" %>
+</div>
 
   <div class="admin">
     <p>Created</p>
